[project]
name = "mr"
description = "Just resender from Max to Telegram."

version = "0.0.0"
requires-python = ">=3.14"
dependences = []

authors = [
    {name = "Michael Rasskazov", email = "mrskzv239@gmail.com"},
]
maintainers = [
    {name = "Michael Rasskazov", email = "mrskzv239@gmail.com"},
]

readme = "README.md"
license = "MIT"
dependencies = [
    "aiogram>=3.24.0",
    "maxbridge>=1.8.0",
]

